--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <title>Work in progress...</title>
   </head>
   <body>
-    <h1>Hello, world!</h1>
+    <h1>Stay Tuned...</h1>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
